# Algorithms_and_data_structures

./: .gitignore  README.md
01_Harry/: harry_potter.py
01_Harry/Harry_Potter_Square/: squares.txt
01_Harry/harry_potter/: CMakeLists.txt  main.cxx
02_Lucky/lucky_tickets/: CMakeLists.txt  lucky_tickets.h  main.cxx  tests.cxx
05_Bitwise/: README.md
05_Bitwise/Chess/: CMakeLists.txt  chess.cpp  chess.hpp
05_Bitwise/Chess/tester/: tester.cpp  tester.hpp
08_QuickAndMergeSort/QuickAndMergeSort/: CMakeLists.txt  README.md  main.cxx  sorts.cxx  sorts.h
09_Linear_sorting/: объяснение
10_BinaryTree/BinaryTree/: CMakeLists.txt
14_Hash_table/: README.md
14_Hash_table/HashTable/: HashTable.cxx  HashTable.h  main.cxx
19_Definitions/: README.md
19_Definitions/graph/: CMakeLists.txt  description.txt  main.cxx
25_BoyerMoore/: README.md
25_BoyerMoore/BoyerMoore/: CMakeLists.txt  RESUME.md  boyer_moore.cpp  boyer_moore.h  brute_force.h  main.cpp
25_BoyerMoore/BoyerMoore/docs/: RESUME.md
27_KnuthMorrisPratt/: README.md
27_KnuthMorrisPratt/KnuthMorrisPratt/: CMakeLists.txt  kmp.cxx  kmp.h  main.cxx  test.cxx
28_Compression/: README.md
28_Compression/Compressor/: CMakeLists.txt  EnhancedRLE.cpp  EnhancedRLE.h  FileUtils.cpp  FileUtils.h  RLE.cpp  RLE.h  main.cpp
31_Dynamic/: README.md
31_Dynamic/dynamic/: CMakeLists.txt  main.cpp  main.cxx  task1.h  task2.h  task3.h  task4.h
31_Dynamic/dynamic/tester/: tester.cpp  tester.h  tester.hpp
Project/: README.md  RESULTS.md
Project/Project/: CMakeLists.txt
Project/Project/include/: ArrayGenerator.h  BubbleSort.h  BucketSort.h  CountingSort.h  HeapSort.h  InsertionSort.h  MergeSort.h  QuickSort.h  RadixSort.h  SelectionSort.h  ShellSort.h  SortManager.h  Sorter.h  Statistics.h
Project/Project/src/: ArrayGenerator.cxx  BubbleSort.cxx  BucketSort.cxx  CMakeLists.txt  CountingSort.cxx  HeapSort.cxx  InsertionSort.cxx  MergeSort.cxx  QuickSort.cxx  RadixSort.cxx  SelectionSort.cxx  ShellSort.cxx  SortManager.cxx  Sorter.cxx  Statistics.cxx  main.cxx
Project/Project/tests/: main.cxx
